--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="navbar">
+    <nav id="navbar">
         <!-- logo -->
         <img id="logo" class="dagi" width='150'
             src="https://avatars.githubusercontent.com/u/68595873?s=400&u=80bbdfc291f01cffaae57bee393b989ea3b24bda&v=4"
@@ -33,48 +33,65 @@
             </a>
         </p>
 
-    </div>
-    <welcome id="welcome-section">
-        <div class="welcome center">
+    </nav>
+    <section id="welcome-section">
+        <h1 class="welcome center">
             Welcome
-        </div>
-    </welcome>
-    <projects id="projects">
-        <h1 class="center">Projects</h1>
+        </h1>
+        <p class="center">hey i am Dagic, I am full stack developer</p>
+        <p class="center">Hey i am Evans, Web developer</p>
+    </section>
+    <h1 class="center">Projects</h1>
+    <section id="projects">
         <div class="projects">
-            <div class="project-title">
+            <div class="project-tile">
                 <a href="https://github.com/Dagic-zewdu/webook" target="_blank" rel="nonreferer">
+
                     <h1 class="center">Webook</h1>
                 </a>
-            </div>
-            <div class="project-title">
-                <a href="https://github.com/Dagic-zewdu/csa_client" target="_blank" rel="nonreferer">
-                    <h1 class="center">Allowance system</h1>
-                </a>
+
             </div>
 
-            <div class="project-title">
+            <div class="project-tile">
+                <a href="https://github.com/Dagic-zewdu/csa_client" target="_blank" rel="nonreferer">
+
+                    <h1 class="center">Allowance system</h1>
+                </a>
+
+            </div>
+
+            <div class="project-tile">
                 <a href="https://github.com/Rehubot/moct-web" target="_blank" rel="nonreferer">
+
                     <h1 class="center">Ministry of culture and tourism</h1>
                 </a>
+
             </div>
-            <div class="project-title">
+            <div class="project-tile">
                 <a href="https://github.com/evans22j/evans-moise" target="_blank" rel="nonreferer">
+
                     <h1 class="center">Evans moise</h1>
                 </a>
             </div>
-            <div class="project-title">
+
+
+            <div class="project-tile">
                 <a href="https://github.com/Rehubot/moct-web" target="_blank" rel="nonreferer">
                     <h1 class="center">HTML</h1>
                 </a>
+
             </div>
-            <div class="project-title">
+            <div class="project-tile">
                 <a href="https://github.com/evans22j/link" target="_blank" rel="nonreferer">
+
+
                     <h1 class="center">Link</h1>
+
                 </a>
             </div>
+
         </div>
-    </projects>
+    </section>
     <div id="profile">
         <a href="https://github.com/Dagic-zewdu" id="profile-link" target="_blank">
             <span class="iconify icon" data-icon="mdi:github"></span>
@@ -92,6 +109,7 @@
         </a>
     </div>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
+
 </body>
 
 </html>
