Added lintors and also some semantics rules

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <h1 class="welcome center">
             Welcome
         </h1>
-        <p class="center">hey i am Dagic, I am full stack developer</p>
-        <p class="center">Hey i am Evans, Web developer</p>
+        <h3 class="center">hey i am Dagic, I am full stack developer</h3>
+        <h3 class="center">Hey i am Evans, Web developer</h3>
     </section>
-    <h1 class="center">Projects</h1>
     <section id="projects">
+    <h2 class="center">Projects</h2>
         <div class="projects">
             <div class="project-tile">
                 <a href="https://github.com/Dagic-zewdu/webook" target="_blank" rel="nonreferer">
@@ -92,7 +92,7 @@
 
         </div>
     </section>
-    <div id="profile">
+    <section id="profile">
         <a href="https://github.com/Dagic-zewdu" id="profile-link" target="_blank">
             <span class="iconify icon" data-icon="mdi:github"></span>
             <div class="float-right">
@@ -107,7 +107,7 @@
                 <h5>jevacrism@gmail.com </h5>
             </div>
         </a>
-    </div>
+    </section>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 
 </body>
