--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             src="https://avatars.githubusercontent.com/u/68595873?s=400&u=80bbdfc291f01cffaae57bee393b989ea3b24bda&v=4"
             alt="">
 
-        <img width='150' src="https://avatars.githubusercontent.com/u/78371050?v=4" class="float-right evans">
+        <img width='150' src="https://avatars.githubusercontent.com/u/78371050?v=4" class="float-right evans" alt="">
         <h1 class="float-left center">
-            Dagic <> Evans
+            Dagic And Evans
         </h1>
         <p class="center">
             <a href="#dagic" class="white">
@@ -28,7 +28,7 @@
                 dagi.zewdu.dz@gmail.com
             </a>
             <a href="#evans" class="white">
-                <> jevacrism@gmail.com
+                jevacrism@gmail.com
                     <span class="iconify" data-icon="mdi:github"></span>
             </a>
         </p>
@@ -45,7 +45,7 @@
     <h2 class="center">Projects</h2>
         <div class="projects">
             <div class="project-tile">
-                <a href="https://github.com/Dagic-zewdu/webook" target="_blank" rel="nonreferer">
+                <a href="https://github.com/Dagic-zewdu/webook">
 
                     <h1 class="center">Webook</h1>
                 </a>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="project-tile">
-                <a href="https://github.com/Dagic-zewdu/csa_client" target="_blank" rel="nonreferer">
+                <a href="https://github.com/Dagic-zewdu/csa_client">
 
                     <h1 class="center">Allowance system</h1>
                 </a>
@@ -61,14 +61,14 @@
             </div>
 
             <div class="project-tile">
-                <a href="https://github.com/Rehubot/moct-web" target="_blank" rel="nonreferer">
+                <a href="https://github.com/Rehubot/moct-web">
 
                     <h1 class="center">Ministry of culture and tourism</h1>
                 </a>
 
             </div>
             <div class="project-tile">
-                <a href="https://github.com/evans22j/evans-moise" target="_blank" rel="nonreferer">
+                <a href="https://github.com/evans22j/evans-moise">
 
                     <h1 class="center">Evans moise</h1>
                 </a>
@@ -76,13 +76,13 @@
 
 
             <div class="project-tile">
-                <a href="https://github.com/Rehubot/moct-web" target="_blank" rel="nonreferer">
+                <a href="https://github.com/Rehubot/moct-web">
                     <h1 class="center">HTML</h1>
                 </a>
 
             </div>
             <div class="project-tile">
-                <a href="https://github.com/evans22j/link" target="_blank" rel="nonreferer">
+                <a href="https://github.com/evans22j/link">
 
 
                     <h1 class="center">Link</h1>
@@ -93,14 +93,14 @@
         </div>
     </section>
     <section id="profile">
-        <a href="https://github.com/Dagic-zewdu" id="profile-link" target="_blank">
+        <a href="https://github.com/Dagic-zewdu" class="profile-link">
             <span class="iconify icon" data-icon="mdi:github"></span>
             <div class="float-right">
                 <h1 id="dagic">Dagic-zewdu</h1>
                 <h5>dagi.zewdu.dz@gmail.com</h5>
             </div>
         </a>
-        <a id="profile-link" href="https://github.com/evans22j" target="blank">
+        <a class="profile-link" href="https://github.com/evans22j" target="blank">
             <span class="iconify icon" data-icon="mdi:github"></span>
             <div class="float-right">
                 <h1 id="evans">Evans</h1>
